--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rppal = "0.11.3"
+reqwest = "0.10.8"
+tokio = { version = "0.2", features = ["macros"] }
