--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.5"
+actix-web = "3.2.0"
 posixmq = "0.2.0"
